--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb://localhost:27017/
+MONGO_URL=mongodb+srv://ManojLakshmi:8904016770mk@cluster0.5xh3ozw.mongodb.net/sample_mflix
 SECRET_KEY=askljdflkasdfklkasbhfkjashdlkjfha.lakshmi
